--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -133,20 +133,46 @@
             <div class="modal-body">
               <form style="margin: auto" id="signUpForm" action="">
                 <div class="form-group">
-                    <label for="emailInput" class="bmd-label-floating">Email address</label>
-                    <input type="email" class="form-control" id="emailSignUp">
+                  <label for="emailInput" class="bmd-label-floating">Email address</label>
+                  <input type="email" class="form-control" id="emailSignUp">
                 </div>
                 <div class="form-group">
-                    <label for="passwordSignUp" class="bmd-label-floating">Password</label>
-                    <input type="password" class="form-control" minlength="6" id="passwordSignUp" oninvalid="this.setCustomValidity('Password must be at least 6 characters.')">
+                  <label for="passwordSignUp" class="bmd-label-floating">Password</label>
+                  <input type="password" class="form-control" minlength="6" id="passwordSignUp" oninvalid="this.setCustomValidity('Password must be at least 6 characters.')">
                 </div>
                 <div class="form-group">
-                    <label for="passwordConfirmation" class="bmd-label-floating">Confirm password</label>
-                    <input type="password" class="form-control" id="passwordConfirmation">
+                  <label for="passwordConfirmation" class="bmd-label-floating">Confirm password</label>
+                  <input type="password" class="form-control" id="passwordConfirmation">
                 </div>
                 <div class="text-center">
-                    <button type="submit" id="submit" class="btn btn-primary">Sign Up</button>
-                    <button type="button" id="back"  class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                  <button type="submit" id="submit" class="btn btn-primary">Sign Up</button>
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="signUp-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Login</h5>
+            </div>
+            <div class="modal-body">
+              <form style="margin: auto" id="loginForm" action="">
+                <div class="form-group">
+                  <label for="emailInput" class="bmd-label-floating">Email address</label>
+                  <input type="email" class="form-control" id="emailLogin">
+                </div>
+                <div class="form-group">
+                  <label for="passwordInput" class="bmd-label-floating">Password</label>
+                  <input type="password" class="form-control" id="passwordLogin">
+                </div>
+                <div class="text-center">
+                  <button type="submit" id="login" class="btn btn-primary">Login</button>
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                 </div>
               </form>
             </div>
