--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -22,7 +22,7 @@
           <ul class="nav navbar-nav">
             <li class="nav-item">
                 <img onclick="showInfoModal()" class="btn btn-icon" src="icons/help.svg">
-              <a class="btn btn-outline-primary" style="text-align: center" href="login.html">Login</a>
+              <a class="btn btn-outline-primary" onclick="showLogin()">Login</a>
               <span id="nav-text">or</span>
               <a class="btn btn-outline-primary" onclick="showSignUp()">Sign up</a>
             </li>
@@ -154,7 +154,7 @@
         </div>
       </div>
 
-      <div class="modal fade" id="signUp-modal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -201,4 +201,5 @@
   </script>
   <script src="script.js"></script>
   <script src="signup.js"></script>
+  <script src="login.js"></script>
 </body>
