--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -21,7 +21,7 @@
         <ul class="nav navbar-nav">
           <li class="nav-item">
             <div id="dash">
-              <a class="btn btn-outline-primary" style="text-align: center" href="login.html">Login</a>
+              <a class="btn btn-outline-primary" href="login.html">Login</a>
               <span id="nav-text">or</span>
               <a class="btn btn-outline-primary" href="signup.html">Sign up</a>
             </div>
