--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -91,7 +91,7 @@
         <span id="search-btn-container">
           <button type="button" id="submit" class="btn btn-primary search-btn">Search</button>
         </span>
-        <div id="feedback-target" style="text-align: center;">
+        <div id="feedback-target">
         </div>
       </div>
       <main class="bmd-layout-content">
