--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -31,11 +31,11 @@
       </header>
       <div id="dw-s2" class="bmd-layout-drawer bg-faded">
         <header>
-          <a class="navbar-brand">Search Settings</a>
+          <a class="navbar-brand text-center">Search Settings</a>
         </header>
         <div id="accordion">
           <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header text-center" id="headingOne">
               <h1 class="mb-0">
                 <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseOne"
                     aria-expanded="false" aria-controls="collapseOne">
@@ -61,7 +61,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header" id="headingTwo">
+              <div class="card-header text-center" id="headingTwo">
                 <h1 class="mb-0">
                   <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseTwo"
                       aria-expanded="false" aria-controls="collapseTwo">
@@ -70,18 +70,12 @@
                 </h1>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-header text-color text-center">
-                  <button onclick="getHomeLocation(false)" class="btn btn-secondary collapsed" aria-expanded="false" aria-controls="collapseTwo">
-                    Use My Location
-                  </button>
-                </div>
                 <div class="card-header text-color">
                   <div class="form-group">
-                    <label for="adressInput" class="bmd-label-floating">Address</label>
-                    <input type="text" class="form-control" id="addressInput">
+                    <input type="text" class="form-control text-center" id="addressInput">
                   </div>
                   <div class="text-center">
-                    <button onclick="getHomeLocation(true)" type="button" class="btn btn-secondary">Enter Address</button>
+                    <button onclick="getHomeLocation(false)" type="button" class="btn btn-secondary">Use My Location</button>
                   </div>
                 </div>
               </div>
