--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -76,6 +76,7 @@
                   </div>
                   <div class="text-center">
                     <button onclick="getHomeLocation(false)" type="button" class="btn btn-secondary">Use My Location</button>
+                    <button onclick="getHomeLocation(true)" type="button" class="btn btn-secondary">Use Address</button>
                   </div>
                 </div>
               </div>
