--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -18,6 +18,7 @@
             &#9776;
           </span>
         </button>
+        <a class="btn btn-outline-primary" onclick="displaySaved()">Saved</a>
         <ul class="nav navbar-nav">
           <li class="nav-item">
             <div id="dash">
