--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="secrets.json"></script>
+    <meta name="viewport" content="width=640, initial-scale=0.5, user-scalable=no" />
   </head>
   <body onload="initialize();">
     <div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
