--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -20,6 +20,11 @@
             &#9776;
           </span>
         </button>
+
+        <h5>
+          Planning a road trip? Enter a home location and your desired travel time to find interesting attractions!
+        </h5>
+
         <ul class="nav navbar-nav">
           <li class="nav-item">
             <div id="dash"></div>
@@ -37,19 +42,40 @@
           </header>
 
           <div id="accordion">
+            <div class="card">
+              <div class="card-header text-center" id="headingTwo">
+                <h1 class="mb-0">
+                  <button class="btn btn-link text-color" data-toggle="collapse" data-target="#collapseTwo"
+                        aria-expanded="true" aria-controls="collapseTwo">
+                    Home Location
+                  </button>
+                </h1>
+              </div>
+              <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo">
+                <div class="card-header bg-light text-color">
+                  <div class="form-group">
+                    <input type="text" class="form-control text-center" placeholder="Enter an address" id="addressInput">
+                  </div>
+                  <div class="text-center">
+                    <button onclick="getHomeLocation(false)" type="button" class="btn btn-secondary">Use My Location</button>
+                    <button onclick="getHomeLocation(true)" type="button" class="btn btn-secondary">Use Address</button>
+                  </div>
+                </div>
+              </div>
+            </div>  
 
             <div class="card">
               <div class="card-header text-center" id="headingOne">
 
               <h1 class="mb-0">
-                <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseOne"
-                    aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link text-color" data-toggle="collapse" data-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
                   Travel Time
                 </button>
               </h1>
               </div>
-                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                <div class="card-body">
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne">
+                <div class="card-body bg-light">
                   <form class="form-inline form-mixin">
                     <div class="form-group fg-mixin">
                         <label for="hours" class="bmd-label-floating text-color">HH</label>
@@ -63,28 +89,6 @@
                         <input id="mnts" style="width: 100%; margin-right:0px;" type="text" class="form-control">
                     </div>
                   </form>
-                </div>
-              </div>
-            </div>  
-            
-            <div class="card">
-              <div class="card-header text-center" id="headingTwo">
-                <h1 class="mb-0">
-                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseTwo"
-                        aria-expanded="false" aria-controls="collapseTwo">
-                    Home Location
-                  </button>
-                </h1>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-header text-color">
-                  <div class="form-group">
-                    <input type="text" class="form-control text-center" placeholder="Enter an address" id="addressInput">
-                  </div>
-                  <div class="text-center">
-                    <button onclick="getHomeLocation(false)" type="button" class="btn btn-secondary">Use My Location</button>
-                    <button onclick="getHomeLocation(true)" type="button" class="btn btn-secondary">Use Address</button>
-                  </div>
                 </div>
               </div>
             </div>  
